--- a/Program.html
+++ b/Program.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>program</title>
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
     <Header>
-        <nav class="navbar">
+       <nav class="navbar">
             <ul>
                 <li><a href="index.html">Hjeme</a></li>
-                <li><a href="#"></a>Artwork</li>
-                <div class="logo">EverArtist</div>
-                <li><a href="#">Program</a></li>
-                <li><a href="#">Blog</a></li>          
+                <li><a href="#">Artwork</a></li>
+                <li><a href="Program.html">Program</a></li>
+                <li><a href="#">Blog</a></li>         
             </ul>
-        </nav>
+       </nav>
     </Header>
 
     <h1>Program</h1>
 
-    <section>
+    <section class="Feb">
         <h2>Februar</h2>
         <div> 
             <p>1.</p>  
@@ -72,7 +72,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="Mar">
         <h2>Marts</h2>
         <div> 
             <p>1.</p>  
@@ -136,7 +136,7 @@
         </div>
     </section>
     
-    <section>
+    <section class="Apr">
         <h2>April</h2>
         <div> 
             <p>7.</p>  
