--- a/Program.html
+++ b/Program.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>program</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <Header>
@@ -191,8 +191,14 @@
        
 
     <section>
-        <h3></h3>
-        <p>Vil du være med i Danmarks hyggeligste tegneklub, hvor der er plads til kreativitet, konstruktiv kritik og naturligvis masser af kage, så tøv endelig ikke med at melde dig ind! Vi vil så gerne gøre vores lille klub til et kæmpe fællesskab af dygtige EverArtists.  Hvad end du er nybegynder eller professionel skal du være så velkommen. Vi elsker at dele tips og tricks med hinanden og nyde alle de flotte kunstværker sammen. Tilmeld dig via linket herunder og husk også at følge med på vores sociale medier!</p>
+        <h3>Bliv en EverArtist idag!</h3>
+        <p>Vil du være med i Danmarks hyggeligste tegneklub, hvor der er plads til kreativitet,<br> 
+            konstruktiv kritik og naturligvis masser af kage, så tøv endelig ikke med at melde <br>
+            dig ind! Vi vil så gerne gøre vores lille klub til et kæmpe fællesskab af dygtige <br>
+            EverArtists.  Hvad end du er nybegynder eller professionel skal du være så <br>
+            velkommen. Vi elsker at dele tips og tricks med hinanden og nyde alle de flotte<br> 
+            kunstværker sammen. Tilmeld dig via linket herunder og husk også at følge med på <br>
+            vores sociale medier!</p>
     </section>
 
     <footer>
