--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
 
     <section class="ugens-kunstner">
-        <img src="Images/manga.jpg" alt="Manga">
+        <img src="Images/manga.jpg" alt="Manga" width="30%">
         <h3>Ugens EverArtist</h3>
         <p>Hver uge kårer vi ugens EverArtist, som altså har tegnet noget helt exceptionelt flot. Vi stemmer i fællesskab, hvorefter vinderen offentliggøres på vores sociale medier, og efterfølgende findes her på siden, indtil næste uges vinder kåres.
             <br>
