--- a/blog.html
+++ b/blog.html
@@ -11,16 +11,20 @@
 </head>
 
 <body>
-<!--Navigation-->
+    <!--Navigation-->
 
-<!--Sektion1 - blogintro-->
+    <!--Sektion1 - blogintro-->
 
-<h1>Blog</h1>
-<section class="blog-intro">
-    <h2>Velkommen!</h2>
-    <p class="blog-text">Her finder du en masse blogpost fra alle vores medlemmer som deler tips og tricks, inspiration, tutorials og meget mere. Der er en masse gratis step-by-step guides så du kan følge med undervejs på de forskellige posts. 
-Så læn dig tilbage og læs med på nogle spændende posts, i en verden af kreativitet. </p>
-</section>
+    <h1>Blog</h1>
+    <section class="blog-intro">
+        <h2>Velkommen!</h2>
+        <p class="blog-text">Her finder du en masse blogpost fra alle vores medlemmer som deler tips og tricks,
+            inspiration, tutorials og meget mere. Der er en masse gratis step-by-step guides så du kan følge med
+            undervejs på de forskellige posts.
+            Så læn dig tilbage og læs med på nogle spændende posts, i en verden af kreativitet. </p>
+    </section>
+
+    
 
 </body>
 
