--- a/Program.html
+++ b/Program.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">Hjeme</a></li>
                 <li><a href="#">Artwork</a></li>
+                <img src="/Images/logo.png" alt="EverArtist logo">
                 <li><a href="Program.html">Program</a></li>
                 <li><a href="#">Blog</a></li>         
             </ul>
